Bug 491340 - BoardGameGeek description not excaping HTML.
Summary: BoardGameGeek description not excaping HTML.
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.5.5
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-06 08:37 UTC by Stewart Webb
Modified: 2024-08-06 11:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stewart Webb 2024-08-06 08:37:40 UTC
SUMMARY
BoardGameGeek fetcher results in "description" field holding unescaped HTML.


STEPS TO REPRODUCE
1. Search any item using BGG plugin
2. Add to library
3. view "Description" field.

OBSERVED RESULT
presents a single, long row of text, with HTML escape sequences

EXPECTED RESULT
presents HTML decorated text

SOFTWARE/OS VERSIONS
All

ADDITIONAL INFORMATION
I've tested a presumed fix on my local machine, but adding the xsl attribute, `disable-output-escaping="yes"` to `<xsl:value-of select="description"/>` elements.
But I don't know your codebase, so didn't want to just supply a PR as-of-yet.
Comment 1 Robby Stephenson 2024-08-06 11:34:55 UTC
Git commit a6a8e8a0ec36a85257c5e8f07193895ea8a80553 by Robby Stephenson.
Committed on 06/08/2024 at 11:34.
Pushed by rstephenson into branch '4.0'.

Update description for *Geek sites to replace HTML entities

Corrections for BoardGameGeek, VideoGameGeek, and RPGGeek data sources
FIXED-IN: 4.0

M  +4    -0    ChangeLog
M  +5    -1    src/fetch/boardgamegeekfetcher.cpp
M  +5    -1    src/fetch/rpggeekfetcher.cpp
M  +5    -1    src/fetch/videogamegeekfetcher.cpp
M  +1    -0    src/tests/boardgamegeekfetchertest.cpp
M  +1    -0    src/tests/rpggeekfetchertest.cpp
M  +1    -0    src/tests/videogamegeekfetchertest.cpp

https://invent.kde.org/office/tellico/-/commit/a6a8e8a0ec36a85257c5e8f07193895ea8a80553
Comment 2 Robby Stephenson 2024-08-06 11:42:52 UTC
Git commit 53e89960080903644fd35ffe94b9c869a129076c by Robby Stephenson.
Committed on 06/08/2024 at 11:42.
Pushed by rstephenson into branch '3.5'.

Update description for *Geek sites to replace HTML entities

Corrections for BoardGameGeek, VideoGameGeek, and RPGGeek data sources
FIXED-IN: 4.0

M  +4    -0    ChangeLog
M  +5    -1    src/fetch/boardgamegeekfetcher.cpp
M  +5    -1    src/fetch/rpggeekfetcher.cpp
M  +5    -1    src/fetch/videogamegeekfetcher.cpp
M  +1    -0    src/tests/boardgamegeekfetchertest.cpp
M  +1    -0    src/tests/rpggeekfetchertest.cpp
M  +1    -0    src/tests/videogamegeekfetchertest.cpp

https://invent.kde.org/office/tellico/-/commit/53e89960080903644fd35ffe94b9c869a129076c