Update description for *Geek sites to replace HTML entities

Corrections for BoardGameGeek, VideoGameGeek, and RPGGeek data sources

BUG: 491340
FIXED-IN: 4.0